--- a/tac/changelog.html
+++ b/tac/changelog.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Change Log</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h1>Change Log</h1>
